flex/sintactico.output
Terminals unused in grammar

   TKN_SEP
   TKN_PAA
   TKN_PAC
   TKN_CAA
   TKN_CAC


Estado 12 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 13 conflictos: 3 desplazamiento(s)/reducción(ones)
Estado 14 conflictos: 3 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programa $end

    1 programa: /* vacío */
    2         | programa sentCompuesta

    3 sentCompuesta: TKN_SET TKN_ELEM TKN_ASGN Expresion

    4 Expresion: Expresion TKN_UNION Expresion
    5          | Expresion TKN_COMPLEMENT Expresion
    6          | Expresion TKN_INTERSECTION Expresion
    7          | TKN_CNJ


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
TKN_ASGN (258) 3
TKN_ELEM (259) 3
TKN_CNJ (260) 7
TKN_SEP (261)
TKN_UNION (262) 4
TKN_COMPLEMENT (263) 5
TKN_INTERSECTION (264) 6
TKN_PAA (265)
TKN_PAC (266)
TKN_CAA (267)
TKN_CAC (268)
TKN_SET (269) 3


No terminales con las reglas donde aparecen

$accept (15)
    en la izquierda: 0
programa (16)
    en la izquierda: 1 2, en la derecha: 0 2
sentCompuesta (17)
    en la izquierda: 3, en la derecha: 2
Expresion (18)
    en la izquierda: 4 5 6 7, en la derecha: 3 4 5 6


estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 1 (programa)

    programa  ir al estado 1


estado 1

    0 $accept: programa . $end
    2 programa: programa . sentCompuesta

    $end     desplazar e ir al estado 2
    TKN_SET  desplazar e ir al estado 3

    sentCompuesta  ir al estado 4


estado 2

    0 $accept: programa $end .

    $default  aceptar


estado 3

    3 sentCompuesta: TKN_SET . TKN_ELEM TKN_ASGN Expresion

    TKN_ELEM  desplazar e ir al estado 5


estado 4

    2 programa: programa sentCompuesta .

    $default  reduce usando la regla 2 (programa)


estado 5

    3 sentCompuesta: TKN_SET TKN_ELEM . TKN_ASGN Expresion

    TKN_ASGN  desplazar e ir al estado 6


estado 6

    3 sentCompuesta: TKN_SET TKN_ELEM TKN_ASGN . Expresion

    TKN_CNJ  desplazar e ir al estado 7

    Expresion  ir al estado 8


estado 7

    7 Expresion: TKN_CNJ .

    $default  reduce usando la regla 7 (Expresion)


estado 8

    3 sentCompuesta: TKN_SET TKN_ELEM TKN_ASGN Expresion .
    4 Expresion: Expresion . TKN_UNION Expresion
    5          | Expresion . TKN_COMPLEMENT Expresion
    6          | Expresion . TKN_INTERSECTION Expresion

    TKN_UNION         desplazar e ir al estado 9
    TKN_COMPLEMENT    desplazar e ir al estado 10
    TKN_INTERSECTION  desplazar e ir al estado 11

    $default  reduce usando la regla 3 (sentCompuesta)


estado 9

    4 Expresion: Expresion TKN_UNION . Expresion

    TKN_CNJ  desplazar e ir al estado 7

    Expresion  ir al estado 12


estado 10

    5 Expresion: Expresion TKN_COMPLEMENT . Expresion

    TKN_CNJ  desplazar e ir al estado 7

    Expresion  ir al estado 13


estado 11

    6 Expresion: Expresion TKN_INTERSECTION . Expresion

    TKN_CNJ  desplazar e ir al estado 7

    Expresion  ir al estado 14


estado 12

    4 Expresion: Expresion . TKN_UNION Expresion
    4          | Expresion TKN_UNION Expresion .
    5          | Expresion . TKN_COMPLEMENT Expresion
    6          | Expresion . TKN_INTERSECTION Expresion

    TKN_UNION         desplazar e ir al estado 9
    TKN_COMPLEMENT    desplazar e ir al estado 10
    TKN_INTERSECTION  desplazar e ir al estado 11

    TKN_UNION         [reduce usando la regla 4 (Expresion)]
    TKN_COMPLEMENT    [reduce usando la regla 4 (Expresion)]
    TKN_INTERSECTION  [reduce usando la regla 4 (Expresion)]
    $default          reduce usando la regla 4 (Expresion)


estado 13

    4 Expresion: Expresion . TKN_UNION Expresion
    5          | Expresion . TKN_COMPLEMENT Expresion
    5          | Expresion TKN_COMPLEMENT Expresion .
    6          | Expresion . TKN_INTERSECTION Expresion

    TKN_UNION         desplazar e ir al estado 9
    TKN_COMPLEMENT    desplazar e ir al estado 10
    TKN_INTERSECTION  desplazar e ir al estado 11

    TKN_UNION         [reduce usando la regla 5 (Expresion)]
    TKN_COMPLEMENT    [reduce usando la regla 5 (Expresion)]
    TKN_INTERSECTION  [reduce usando la regla 5 (Expresion)]
    $default          reduce usando la regla 5 (Expresion)


estado 14

    4 Expresion: Expresion . TKN_UNION Expresion
    5          | Expresion . TKN_COMPLEMENT Expresion
    6          | Expresion . TKN_INTERSECTION Expresion
    6          | Expresion TKN_INTERSECTION Expresion .

    TKN_UNION         desplazar e ir al estado 9
    TKN_COMPLEMENT    desplazar e ir al estado 10
    TKN_INTERSECTION  desplazar e ir al estado 11

    TKN_UNION         [reduce usando la regla 6 (Expresion)]
    TKN_COMPLEMENT    [reduce usando la regla 6 (Expresion)]
    TKN_INTERSECTION  [reduce usando la regla 6 (Expresion)]
    $default          reduce usando la regla 6 (Expresion)
